# 12autotrade

./: .gitignore  12_IG_mapping.json  12_IG_mapping_universe.json  README.md  RUN.md  config.yaml  ig_fetched_instruments.txt  pyproject.toml  rsi_universe.json  rsi_universe_epic_to_twelvedata_full.json  rsi_universe_epic_to_twelvedata_symbol.json  rsi_universe_twelvedata_validation.json  rsi_universe_twelvedata_validation_sample.json
data/: ig_epic_candidates.json  ig_watchlist_cache.json  twelvedata_indices_commodities.json  us_stock_symbols.txt
data/archive/: rsi_universe_epic_to_twelvedata.partial.json
rsi_scanner/: budget.py  config.py  constants.py  ig_watchlist.py  list_markets.py  logging_utils.py  main.py  map_ig_watchlist.py  models.py  scanner.py  scheduler.py  signals.py  sim.py  storage.py  telegram.py  twelvedata.py
scripts/: bot_control.sh  find_ig_epics_for_symbols.py  ig_watchlists_to_twelvedata_map.py  populate_ig_watchlist_cache.py  validate_twelvedata_mapping.py
symbols/: markets.txt  one.txt
tests/: test_budget.py  test_config.py  test_ig_watchlist_cache.py  test_signals.py  test_symbol_epic_map.py
tests/fixtures/: rsi_cross_down.json  rsi_cross_up.json
